CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o enrich_motifs(mode, pseudocount): Choose whether to count motif hits
      once per sequence, and whether to add a pseudocount for P-value
      calculation.

MINOR CHANGES

    o enrich_motifs(): RC argument now defaults to TRUE, increased max
      significance values, no.overlaps now defaults to TRUE. Additional
      columns showing the motif consensus sequence and percent of sequences
      with hits are now included.

    o scan_sequences(RC): Only print a warning if RC=TRUE for non-DNA/RNA
      motifs.

    o Reduced the size of the message when a pseudocount is added to motifs.

CHANGES IN VERSION 1.12.1
-------------------------

BUG FIXES

    o DNA ambiguity letters can be used with create_motif() when
      alphabet="DNA" is specified. Previously ambiguity letters only worked
      when alphabet was not specified.

CHANGES IN VERSION 1.12.0
-------------------------

NEW FEATURES

    o New function, sequence_complexity(): Using either the Wootton-Federhen,
      Trifonov, or DUST algorithms, calculate sequence complexity in sliding
      windows. A version for small arbitrary strings is also provided:
      calc_complexity().

    o New function, mask_ranges(): Similarly to mask_seqs(), mask specific
      positions in a XStringSet object by replacing the letters with a specific
      filler character.

    o New function, motif_range(): Get the min/max range of possible logodds
      scores for a motif.

    o New function, calc_windows(): Utility function for calculating
      coordinates for sliding windows.

    o New function, window_string(): Utility function for retrieving sliding
      windows in a string.

    o New function, slide_fun(): Utility function which wraps window_string()
      and vapply() together.

    o motif_pvalue(method): P-values and scores can now be calculated
      dynamically instead of exhaustively, substantially increasing both speed