@@ -35,6 +35,7 @@ export(log_string_pval)
 export(make_DBscores)
 export(mask_ranges)
 export(mask_seqs)
+export(meme_alph)
 export(merge_motifs)
 export(merge_similar)
 export(motif_peaks)
